--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
+ctrlc = "3.4"
 
 [dev-dependencies]
 tempfile = "3"
