--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
+crossterm = "0.28"
 ctrlc = "3.4"
 rand = "0.8"
+ratatui = "0.29"
 
 [dev-dependencies]
 tempfile = "3"
