--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,8 @@ ctrlc = "3.4"
 rand = "0.8"
 ratatui = "0.29"
 
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
+
 [dev-dependencies]
 tempfile = "3"
