--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
 crossterm = "0.28"
 ctrlc = "3.4"
+once_cell = "1"
 rand = "0.8"
 ratatui = "0.29"
 
