--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
 crossterm = "0.28"
-ctrlc = "3.4"
+ctrlc = { version = "3.5", features = ["termination"] }
 once_cell = "1"
 rand = "0.8"
 ratatui = "0.29"
