--- a/.swarm-hug/.gitignore
+++ b/.swarm-hug/.gitignore
@@ -1,4 +1,5 @@
 # Swarm-hug ignored files
+# This file is managed by swarm-hug. Do not edit.
 # These are transient/local files that shouldn't be committed
 
 # Agent worktrees (recreated each sprint)
